fixed x overflow problem

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.content {
+    width: 100%;
+    margin: auto;
+    overflow-x: hidden;
+}
+
 #bannerSugarbowl {
     width: 100%;
 }
